<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abc.movieapp.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_main"
        tools:ignore="RtlHardcoded,UselessParent"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentRight="false"
        android:layout_centerVertical="false"
        android:layout_centerInParent="true">

        <Button
            android:text="@string/add_movie_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAddMovie"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:text="@string/edit_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEdit"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:text="@string/delete_movie_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDeleteMovie"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:text="@string/show_list_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonShowListByYear"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:text="@string/show_list_rating_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonShowListByRating"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>
