<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abc.movieapp.add_activity">

    <TextView
        android:text="@string/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewName"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:maxLength="50"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignBottom="@+id/textViewName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="22dp"
        android:layout_marginEnd="22dp"
        android:id="@+id/editTextName"
        tools:ignore="HardcodedText,RelativeOverlap" />

    <TextView
        android:text="@string/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:id="@+id/textViewDescription"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/textViewDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/editTextDes"
        android:maxLength="1000"/>

    <TextView
        android:text="@string/genre_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextDes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:id="@+id/textViewGenre"
        android:textSize="18sp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewGenre"
        android:id="@+id/spinnerGenre"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_alignStart="@+id/editTextName"
        android:layout_alignRight="@+id/editTextName"
        android:layout_alignEnd="@+id/editTextName"
        android:prompt="@string/select_label"
        android:entries="@array/genre_labels"/>

    <TextView
        android:text="@string/rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewGenre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/textViewRating"
        android:textSize="18sp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewRating"
        android:id="@+id/seekBarRating"
        android:layout_alignLeft="@+id/spinnerGenre"
        android:layout_alignStart="@+id/spinnerGenre"
        android:layout_alignRight="@+id/spinnerGenre"
        android:layout_alignEnd="@+id/spinnerGenre"
        android:max="5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_alignBottom="@+id/textViewYear"
        android:layout_alignLeft="@+id/seekBarRating"
        android:layout_alignStart="@+id/seekBarRating"
        android:id="@+id/editTextYear" />

    <TextView
        android:text="@string/year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/textViewYear"
        android:textSize="18sp"
        android:layout_below="@+id/textViewRating"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/imdb_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewYear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:id="@+id/textViewIMDB"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignBottom="@+id/textViewIMDB"
        android:layout_alignRight="@+id/editTextYear"
        android:layout_alignEnd="@+id/editTextYear"
        android:id="@+id/editTextIMDB"
        android:inputType="textUri" />

    <Button
        android:text="@string/add_movie_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextIMDB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/buttonAddMovie"
        android:textAllCaps="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/seekBarRating"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textViewSeekRating" />
</RelativeLayout>
